@@ -261,6 +261,12 @@ socket_timeout = 20
     aggregate_type = none
     width = 1
     time_length = 86400    # == 24 hours
+    # The following merits an explanation. The y-axis scale used for plotting
+    # can be controlled using option 'yscale'. It is a 3-way tuple, with
+    # values (ylow, yhigh, min_interval). If set to "None", a parameter is
+    # set automatically, otherwise the value is used. However, in the case of
+    # min_interval, what is set is the *minimum* y-axis tick interval. 
+    yscale = None, None, None
     
     [[day_images]]
         x_label_format = %H:%M
@@ -279,16 +285,20 @@ socket_timeout = 20
             [[[[heatindex]]]]
         
         [[[dayrain]]]
+        	# Make sure the y-axis increment is at least 0.02 for the rain plot:
+            yscale = None, None, 0.02
+            plot_type = bar
             [[[[rain]]]]
-                plot_type = bar
                 aggregate_type = sum
                 aggregate_interval = 3600
                 label = Rain (hourly avg)
+                
         
         [[[dayrx]]]
             [[[[rxCheckPercent]]]]
         
         [[[daypond]]]
+        	yscale = None, None, 0.5
             [[[[extraTemp1]]]]
         
         [[[daywind]]]
@@ -300,6 +310,8 @@ socket_timeout = 20
             [[[[inHumidity]]]]
         
         [[[daywinddir]]]
+        	# Hardwire in the y-axis scale for wind direction:
+        	yscale = 0.0, 360.0, 60.0
             [[[[windDir]]]]
     
     [[week_images]]
@@ -321,13 +333,15 @@ socket_timeout = 20
             [[[[heatindex]]]]
         
         [[[weekrain]]]
+            yscale = None, None, 0.02
+            plot_type = bar
             [[[[rain]]]]
-                plot_type = bar
                 aggregate_type = sum
                 aggregate_interval = 86400
                 label = Rain (daily avg)
         
         [[[weekpond]]]
+        	yscale = None, None, 0.5
             [[[[extraTemp1]]]]
         
         [[[weekrx]]]
@@ -343,6 +357,7 @@ socket_timeout = 20
             [[[[inHumidity]]]]
         
         [[[weekwinddir]]]
+        	yscale = 0.0, 360.0, 60.0
             [[[[windDir]]]]
     
     [[month_images]]
@@ -364,13 +379,15 @@ socket_timeout = 20
             [[[[heatindex]]]]
         
         [[[monthrain]]]
+            yscale = None, None, 0.02
+            plot_type = bar
             [[[[rain]]]]
-                plot_type = bar
                 aggregate_type = sum
                 aggregate_interval = 86400
                 label = Rain (daily avg)
         
         [[[monthpond]]]
+        	yscale = None, None, 0.5
             [[[[extraTemp1]]]]
         
         [[[monthrx]]]
@@ -386,6 +403,7 @@ socket_timeout = 20
             [[[[inHumidity]]]]
         
         [[[monthwinddir]]]
+        	yscale = 0.0, 360.0, 60.0
             [[[[windDir]]]]
     
     [[year_images]]
@@ -413,14 +431,16 @@ socket_timeout = 20
             [[[[heatindex]]]]
         
         [[[yearrain]]]
+            yscale = None, None, 0.02
+            plot_type = bar
             [[[[rain]]]]
-                plot_type = bar
                 aggregate_type = sum
                 #			aggregate_interval = 2629800 # Magic number: the length of a nominal month
                 aggregate_interval = 604800    # == 1 week
                 label = Rain (weekly avg)
         
         [[[yearpond]]]
+        	yscale = None, None, 0.5
             [[[[extraTemp1]]]]
         
         [[[yearrx]]]
@@ -431,6 +451,7 @@ socket_timeout = 20
             [[[[inHumidity]]]]
         
         [[[yearwinddir]]]
+        	yscale = 0.0, 360.0, 60.0
             [[[[windDir]]]]
 
 
