@@ -3,7 +3,10 @@ CHANGE HISTORY
 
 1.2.0   11/16/09
 
-Improved axis scaling.
+Improved axis scaling. The automatic axis scaling routine
+now does a better job for ranges less than 1.0. The user can also
+hardwire in min and max values, as well as specify a minimum increment, through
+parameter 'yscale' in section [Images] in the configuration file.
 
 
 1.1.0   11/14/09
